--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "carbon-react": "^21.1.2",
+    "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "yup": "^0.29.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +35,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "core-js": "^3.1.4",
+    "jest": "24.9.0",
+    "jest-styled-components": "^6.3.1",
+    "prettier": "2.0.5",
+    "prop-types": "^15.5.8",
+    "react-test-renderer": "^16.13.1",
+    "styled-components": "^4.4.1"
   }
 }
