--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,8 @@
     "import/extensions": ["off", "never"],
     "import/no-extraneous-dependencies": "off",
     "import/no-unresolved": "off",
+    "import/prefer-default-export":"warn",
+    "import/order": "warn",
     "indent": ["error", 2, {
       "VariableDeclarator": 2,
       "SwitchCase": 1
@@ -54,6 +56,7 @@
     "react/jsx-max-props-per-line": ["error", { "maximum": 2 }],
     "react/jsx-uses-react": "warn",
     "react/jsx-uses-vars": "warn",
+    "react/prop-types": "warn",
     "react/jsx-wrap-multilines": ["error", {
       "declaration": "parens-new-line",
       "assignment": "parens-new-line",
