Building the nav (#5)
* chore: upgrade carbon

* chore: add google lato font

* feat: add themeprovider to root
add styled components to root and appwrapper

* feat: add navbar and child components
adds usermenu and logo

* feat: add table and sorting to leaderboard

* feat: add banner

* chore(dev-dep): add enzyme adapter dep

* Added PR changes
Removed unnecessary code
Added new linting rules
Added i18n and node sass

* fixed lint service worker

Co-authored-by: Anthony Vest <anthony.vest@outlook.com>

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "import/no-unresolved": "off",
     "import/prefer-default-export":"warn",
     "import/order": "warn",
+    "curly": ["error", "multi-or-nest"],
     "indent": ["error", 2, {
       "VariableDeclarator": 2,
       "SwitchCase": 1
@@ -29,6 +30,7 @@
     "max-len": ["error", 140],
     "max-params": ["error", 5],
     "multiline-ternary": 1,
+    "no-nested-ternary": 0,
     "no-param-reassign": ["error", { "props": false }],
     "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
     "no-restricted-syntax": "off",
