--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "dependencies": {
     "axios": "^0.19.2",
     "camelcase": "^5.3.1",
-    "carbon-react": "^30.0.0",
+    "carbon-react": "^35.1.0",
+    "draft-js": "^0.11.6",
     "formik": "^2.1.4",
     "fs-extra": "^8.1.0",
+    "i18n-js": "^3.7.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-router": "^3.0.0",
     "react-string-format": "0.0.6",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
@@ -57,6 +61,7 @@
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "17.0.0",
     "eslint-config-react-app": "^5.2.1",
