--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "formik": "^2.1.4",
     "fs-extra": "^8.1.0",
     "i18n-js": "^3.7.1",
+    "msal": "^1.3.4",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-aad-msal": "^2.3.5",
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
@@ -59,7 +61,7 @@
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "core-js": "^3.1.4",
     "css-loader": "3.4.2",
-    "dotenv": "8.2.0",
+    "dotenv": "^8.2.0",
     "dotenv-expand": "5.1.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^6.6.0",
