--- a/docker/api.yml
+++ b/docker/api.yml
@@ -12,36 +12,19 @@ services:
     networks:
         - drive
 
-  mysql:
-    image: mysql/mysql-server:5.7
-    container_name: mysql
-    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --innodb-use-native-aio=0
-    environment:
-        MYSQL_USER: root
-        MYSQL_ROOT_PASSWORD: admin
-        MYSQL_ROOT_HOST: '%'
+  react-dev:
+    image: node:14-alpine
+    container_name: client
+    working_dir: /app
+    volumes:
+      - ../:/app
+    stdin_open: true
     ports:
-        - 3306:3306
+      - 3000:3000
+      - 35729:35729
     networks:
         - drive
-    healthcheck:
-        test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
-        timeout: 20s
-        retries: 10
-
-  server:
-    image: paulhannon/beltsandleaders.server:1.0.0
-    container_name: server
-    ports:
-      - 5000:80
-    networks:
-        - drive
-    environment:
-        DATABASE_CONNECTION_STRING: "Server=host.docker.internal;Uid=root;Pwd=admin"
-        DATABASE_NAME: "BeltsAndLeaders"
-    depends_on:
-        mysql:
-            condition: service_healthy
+    command: "npm run dev"
 
 networks:
    drive: 
