--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "formik": "^2.1.5",
     "fs-extra": "^8.1.0",
     "i18n-js": "^3.7.1",
-    "msal": "^1.4.0",
+    "msal": "1.3.4",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-aad-msal": "^2.3.5",
@@ -26,9 +26,12 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
+    "docker-up": "rm -rf node_modules/ && docker-compose -f ./docker/deps.yml up -d && docker-compose -f ./docker/api.yml up react-dev",
+    "docker-down": "docker-compose -f ./docker/deps.yml down && docker-compose -f ./docker/api.yml down",
+    "dev": "npm install && CHOKIDAR_USEPOLLING=true && npm start",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -82,7 +85,6 @@
     "jest-styled-components": "^6.3.1",
     "jest-watch-typeahead": "0.4.2",
     "mini-css-extract-plugin": "0.9.0",
-    "miragejs": "^0.1.40",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
