--- a/docker/deps.yml
+++ b/docker/deps.yml
@@ -19,7 +19,7 @@ services:
         retries: 10
 
   server:
-    image: paulhannon/beltsandleaders.server:1.0.0
+    image: paulhannon/beltsandleaders.server:v1.2.0
     container_name: server
     ports:
       - 5000:80
