--- a/docker/api.yml
+++ b/docker/api.yml
@@ -7,25 +7,15 @@ services:
     build:
       context: ..
       dockerfile: docker/client.Dockerfile
-    ports:
-      - 3000:3000
-    networks:
-        - drive
-
-  react-dev:
-    image: node:14-alpine
-    container_name: client
-    working_dir: /app
     volumes:
       - ../:/app
-    stdin_open: true
+      - '/app/node_modules'
     ports:
       - 3000:3000
-      - 35729:35729
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     networks:
         - drive
-    command: "npm run dev"
-
 networks:
    drive: 
      name: 'drive'
